# wsws-bulletin

./: .env.example  .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: text-to-speech.md
wsws_bulletin/: __init__.py  __main__.py  config.py  scraper.py  synthesizer.py  text_to_speech.py
